// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Log Viewer should render empty 1`] = `
<div
  aria-hidden={false}
  className="sc-bdVaJa htgHiE"
  role="list"
/>
`;

exports[`Project Log Viewer should render empty when hidden it 1`] = `
<div
  aria-hidden={true}
  className="sc-bdVaJa htgHiE"
  role="list"
/>
`;

exports[`Project Log Viewer should render items each level 1`] = `
<div
  aria-hidden={false}
  className="sc-bdVaJa htgHiE"
  role="list"
>
  <div
    aria-selected={false}
    className="sc-bwzfXH daSFCf"
    role="listitem"
  >
    <span
      className="sc-htpNat kQdIEM"
      data-level="info"
    >
      [
      INFO
      ]
    </span>
    <span
      className="sc-bxivhb ghzfYa"
    >
      info
    </span>
  </div>
  <div
    aria-selected={false}
    className="sc-bwzfXH daSFCf"
    role="listitem"
  >
    <span
      className="sc-htpNat kQdIEM"
      data-level="error"
    >
      [
      ERROR
      ]
    </span>
    <span
      className="sc-bxivhb ghzfYa"
    >
      error
    </span>
  </div>
  <div
    aria-selected={false}
    className="sc-bwzfXH daSFCf"
    role="listitem"
  >
    <span
      className="sc-htpNat kQdIEM"
      data-level="warning"
    >
      [
      WARNING
      ]
    </span>
    <span
      className="sc-bxivhb ghzfYa"
    >
      warning
    </span>
  </div>
</div>
`;
